deploy: af0bd811302d57c95fe7e13c7f320c525280f5aa

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-dec91b9b.js";
+            window.path_to_searchindex_js = "searchindex-6ad7901b.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="toc-9f85df4a.js"></script>
+        <script src="toc-3145f91a.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -187,7 +187,7 @@
 <li><strong>Stakers</strong>: Token holders provide the economic security that underpins every proof. By delegating BREV to reputable provers, stakers help ensure a high quality of service while participating in the growth of the proving economy.</li>
 </ul>
 <hr>
-<h4 id="the-brev-economy"><a class="header" href="#the-brev-economy">The BREV Economy</a></h4>
+<h4 id="the-brev-utility"><a class="header" href="#the-brev-utility">The BREV Utility</a></h4>
 <p>The <strong>BREV token</strong> serves as the core of the ProverNet economy, aligning incentives and facilitating value exchange across the network:</p>
 <ul>
 <li><strong>Payment Medium</strong>: BREV is the native settlement currency for all proving services.</li>
