--- a/operation-manual/use-the-provernet/send-proof-requests.html
+++ b/operation-manual/use-the-provernet/send-proof-requests.html
@@ -36,10 +36,10 @@
             const path_to_root = "../../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../../searchindex-dec91b9b.js";
+            window.path_to_searchindex_js = "../../searchindex-6ad7901b.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="../../toc-9f85df4a.js"></script>
+        <script src="../../toc-3145f91a.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -192,7 +192,7 @@
 }
 
 struct FeeParams {
-    uint96 maxFee;    // Max USDC to pay for the proof
+    uint96 maxFee;    // Max BREV to pay for the proof
     uint96 minStake;  // Minimum prover stake required to bid
     uint64 deadline;  // Unix timestamp; proof must be submitted by this time
 }
