--- a/provernet-architecture/staking-and-economic-security/index.html
+++ b/provernet-architecture/staking-and-economic-security/index.html
@@ -36,10 +36,10 @@
             const path_to_root = "../../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../../searchindex-dec91b9b.js";
+            window.path_to_searchindex_js = "../../searchindex-6ad7901b.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="../../toc-9f85df4a.js"></script>
+        <script src="../../toc-3145f91a.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -176,9 +176,9 @@
                 <div id="mdbook-content" class="content">
                     <main>
                         <h1 id="staking--economic-security"><a class="header" href="#staking--economic-security">Staking &amp; Economic Security</a></h1>
-<p>The Staking &amp; Economic Security layer is the foundation for the network’s operational reliability and incentive alignment. While Zero-Knowledge proofs provide the mathematical guarantee of correctness, this layer provides the economic framework that ensures the prover marketplace remains active, responsive, and highly available.</p>
+<p>The Staking &amp; Economic Security layer is the foundation for the network’s operational reliability and incentive alignment. While zero-knowledge proofs provide the mathematical guarantee of correctness, this layer creates the economic framework that ensures the prover marketplace remains active, responsive, and highly available.</p>
 <h4 id="the-role-of-capital-in-the-protocol"><a class="header" href="#the-role-of-capital-in-the-protocol">The Role of Capital in the Protocol</a></h4>
-<p>Staking in the Brevis Prover Network is designed to align the interests of all participants. By requiring provers to maintain a stake, the protocol ensures that every actor is a committed stakeholder with a long-term interest in the network’s health and reputation.</p>
+<p>Staking in Brevis ProverNet is designed to align the interests of all participants. By requiring provers to maintain a stake, the protocol ensures that every actor is a committed stakeholder with a long-term interest in the network’s health and reputation.</p>
 <ul>
 <li><strong>Operational Reliability</strong>: Staking ensures that provers meet a high standard of performance, fostering a predictable and dependable marketplace for requesters.</li>
 <li><strong>Dynamic Eligibility</strong>: A prover’s capacity to bid on and win work is linked to their available stake, ensuring the network remains balanced and that every assignment is backed by sufficient collateral.</li>
@@ -191,10 +191,10 @@
 <li><strong>Seamless Compounding</strong>: Rewards are added directly into the vaults, increasing the asset-to-share ratio and allowing for automated reward compounding without the need for manual claims by stakers.</li>
 </ul>
 <h4 id="economic-opportunity"><a class="header" href="#economic-opportunity">Economic Opportunity</a></h4>
-<p>The security layer is designed to reward participation through multiple diversified yield streams:</p>
+<p>The security layer is designed to reward participation through diversified yield streams:</p>
 <ul>
 <li><strong>Marketplace Fees</strong>: Successfully fulfilling proof requests generates fees that flow back into the staking system, increasing the value of vault shares.</li>
-<li><strong>Foundation Rewards</strong>: In addition to marketplace fees, the protocol distributes foundation-funded rewards to provers based on their ZK-verified activities and total stake (vault assets).</li>
+<li><strong>Foundation Rewards</strong>: In addition to marketplace fees, the protocol distributes Foundation-funded rewards to provers based on their ZK-verified activities and total stake (vault assets).</li>
 <li><strong>Shared Success</strong>: Both provers and stakers benefit from these combined revenue streams, creating a collaborative environment for scaling decentralized ZK-computation.</li>
 </ul>
 
