--- a/provernet-architecture/staking-and-economic-security/staking.html
+++ b/provernet-architecture/staking-and-economic-security/staking.html
@@ -36,10 +36,10 @@
             const path_to_root = "../../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../../searchindex-dec91b9b.js";
+            window.path_to_searchindex_js = "../../searchindex-6ad7901b.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="../../toc-9f85df4a.js"></script>
+        <script src="../../toc-3145f91a.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -176,7 +176,7 @@
                 <div id="mdbook-content" class="content">
                     <main>
                         <h1 id="staking"><a class="header" href="#staking">Staking</a></h1>
-<p>The Staking system provides the economic framework for prover participation. By requiring provers to lock collateral, the protocol ensures a highly active and responsive marketplace where every actor has a measurable commitment to the network’s operational success.</p>
+<p>The staking system provides the economic framework for prover participation. By requiring provers to lock collateral, the protocol ensures a highly active and responsive marketplace where every actor has a measurable commitment to the network’s operational success.</p>
 <hr>
 <h3 id="prover-lifecycle"><a class="header" href="#prover-lifecycle">Prover Lifecycle</a></h3>
 <p>The <code>StakingController</code> manages the journey of an operator through a defined set of states and requirements to ensure all active participants remain economically aligned with the protocol.</p>
@@ -189,20 +189,20 @@
 </ul>
 <h4 id="registration--initialization"><a class="header" href="#registration--initialization">Registration &amp; Initialization</a></h4>
 <p>Operators enter the network by calling <code>initializeProver</code>. This function triggers two simultaneous actions:</p>
-<ol>
+<ul>
 <li><strong>Vault Deployment</strong>: The deterministic deployment of a dedicated ProverVault (ERC-4626) specifically for that operator.</li>
 <li><strong>Initial Deposit</strong>: An initial stake that satisfies the minimum self-stake requirement, moving the operator directly from the Null state to the Active state.</li>
-</ol>
+</ul>
 <h4 id="self-stake-requirement"><a class="header" href="#self-stake-requirement">Self-Stake Requirement</a></h4>
 <p>To maintain an Active status, provers must adhere to strict collateral rules:</p>
 <ul>
-<li><strong>Mandatory Collateral</strong>: Provers must maintain a specific amount of their own assets (<code>minSelfStake</code>) within their vault at all times.</li>
+<li><strong>Mandatory Collateral</strong>: Provers must maintain a specific amount of their own assets (defined by <code>minSelfStake</code>) within their vault at all times.</li>
 <li><strong>Non-Transferable Shares</strong>: The portion of vault shares representing the minimum self-stake is locked and cannot be transferred while the prover is active.</li>
 <li><strong>Automatic Enforcement</strong>: If a prover’s self-stake falls below the required threshold, the system transitions them to the Deactivated state to ensure all active work is properly collateralized.</li>
 </ul>
 <hr>
 <h3 id="the-staking-process"><a class="header" href="#the-staking-process">The Staking Process</a></h3>
-<p>Asset management within the network is handled through a streamlined process for both provers and their stakers utilizing isolated vaults.</p>
+<p>Asset management within the network is handled through isolated vaults, with a streamlined process for both provers and their stakers.</p>
 <ul>
 <li><strong>Direct Staking</strong>: Users can stake with any active prover by depositing BREV tokens into the <code>StakingController</code>. The controller manages the deposit into the isolated vault and issues vault shares to the user.</li>
 <li><strong>Compounding Yield</strong>: Rewards from the marketplace or foundation are added directly to the vault assets. This increases the value of all shares automatically, allowing for seamless compounding without manual claims.</li>
