deploy: eb41438812da49d94b805e0a133d29ab98724ac2

--- a/print.html
+++ b/print.html
@@ -37,7 +37,7 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-6ad7901b.js";
+            window.path_to_searchindex_js = "searchindex-508d9121.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="toc-3145f91a.js"></script>
@@ -1020,10 +1020,9 @@ go build -o tools
 <p>BREV holders can stake and delegate tokens to provers on ProverNet. Delegation works similarly to proof-of-stake systems: provers with more delegated stake can take on more proving jobs, and in return they share a portion of the proving fees with their delegators.</p>
 <h4 id="bridge-brev-to-base"><a class="header" href="#bridge-brev-to-base">Bridge BREV to Base</a></h4>
 <p>ProverNet staking currently operates on Base. Before you start staking, you may need to bridge BREV to Base using <a href="https://cbridge.celer.network/1/8453/BREV">cBridge</a>.</p>
-<p><em>[Screenshot]</em></p>
 <h4 id="view-active-provers"><a class="header" href="#view-active-provers">View Active Provers</a></h4>
 <p>If a prover fails to meet its SLA commitments, delegated stake may be slashed. Evaluate provers carefully and adjust your delegation periodically. </p>
-<p>Visit the Brevis Prover Network <em>[Link]</em> to view all active provers along with key statistics including BREV staked, proofs generated, and fees earned.</p>
+<p>Visit the <a href="https://provernet.brevis.network/">Brevis Prover Network</a> to view all active provers along with key statistics including BREV staked, proofs generated, and fees earned.</p>
 <h4 id="stake-brev"><a class="header" href="#stake-brev">Stake BREV</a></h4>
 <p>To stake, connect your wallet and select a prover. </p>
 <p><img src=".gitbook/assets/Screenshot 2025-12-24 at 20.19.49.png" alt=""><figcaption></figcaption></p>
@@ -1032,10 +1031,10 @@ go build -o tools
 <p>You may need to <em>Approve</em> the Brevis staking contract to allow the spending of BREV first. Once approved, you can submit the stake transaction.</p>
 <p><img src=".gitbook/assets/Screenshot 2025-12-24 at 22.32.25.png" alt=""><figcaption></figcaption></p>
 <p><img src=".gitbook/assets/Screenshot 2025-12-24 at 22.36.00.png" alt=""><figcaption></figcaption></p>
-<p>To increase your stake with provers you’ve already delegated to, visit the <em>Dashboard</em> <em>[Link]</em> and use the <em>Stake More</em> option.</p>
+<p>To increase your stake with provers you’ve already delegated to, visit the <em>Dashboard</em> tab and use the <em>Stake More</em> option.</p>
 <p><img src=".gitbook/assets/Screenshot 2025-12-24 at 20.37.21.png" alt=""><figcaption></figcaption></p>
 <h4 id="dashboard"><a class="header" href="#dashboard">Dashboard</a></h4>
-<p>The Dashboard <em>[LINK]</em> displays your total stake and detailed information for each prover, including staked amount, pending unstake amount, and withdrawable amount.</p>
+<p>The <em>Dashboard</em> tab displays your total stake and detailed information for each prover, including staked amount, pending unstake amount, and withdrawable amount.</p>
 <ul>
 <li><strong>Total stake</strong>: All BREV staked across provers plus earned rewards. Rewards compound automatically on a daily basis.</li>
 <li><strong>Staked amount</strong>: BREV currently staked with a specific prover.</li>
