deploy: 3a91bf79329b098767d411455c1df2e304b85f9c

--- a/operation-manual/operate-a-prover-node/run-the-pico-proving-server/deploy-cpu-prover.html
+++ b/operation-manual/operate-a-prover-node/run-the-pico-proving-server/deploy-cpu-prover.html
@@ -36,7 +36,7 @@
             const path_to_root = "../../../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../../../searchindex-508d9121.js";
+            window.path_to_searchindex_js = "../../../searchindex-55405e8e.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../../../toc-3145f91a.js"></script>
@@ -185,7 +185,7 @@
 <li>Install prerequisites:
 <ul>
 <li><a href="https://www.rust-lang.org/tools/install">Rust</a> (restart the shell after installation).</li>
-<li>Build tools: <code>sudo apt-get install -y build-essential cmake git pkg-config libssl-dev</code></li>
+<li>Build tools: <code>sudo apt-get update &amp;&amp; sudo apt-get install -y build-essential cmake git pkg-config libssl-dev protobuf-compiler</code></li>
 <li><a href="https://github.com/launchbadge/sqlx/tree/main/sqlx-cli">sqlx-cli</a>: <code>cargo install sqlx-cli</code></li>
 </ul>
 </li>
