deploy: d3b660104acb789a463af2b54e42d275d291408b

--- a/user-tutorial/staking-in-provernet.html
+++ b/user-tutorial/staking-in-provernet.html
@@ -36,7 +36,7 @@
             const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../searchindex-55405e8e.js";
+            window.path_to_searchindex_js = "../searchindex-1cea7c01.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../toc-3145f91a.js"></script>
@@ -195,10 +195,10 @@
 <h4 id="dashboard"><a class="header" href="#dashboard">Dashboard</a></h4>
 <p>The <em>Dashboard</em> tab displays your total stake and detailed information for each prover, including staked amount, pending unstake amount, and withdrawable amount.</p>
 <ul>
-<li><strong>Total stake</strong>: All BREV staked across provers plus earned rewards. Rewards compound automatically on a daily basis.</li>
-<li><strong>Staked amount</strong>: BREV currently staked with a specific prover.</li>
-<li><strong>Pending unstake</strong>: Amount currently in the 7-day unstaking period.</li>
-<li><strong>Withdrawable amount</strong>: Unstaked amount that has passed the 7-day period and is ready to withdraw.</li>
+<li><strong>Your Total Stake</strong>: All BREV staked across provers plus earned rewards. Rewards compound automatically on a daily basis.</li>
+<li><strong>Staked Amount</strong>: BREV currently staked with a specific prover.</li>
+<li><strong>Pending Unstake Amount</strong>: Amount currently in the 7-day unstaking period.</li>
+<li><strong>Withdrawable Amount</strong>: Unstaked amount that has passed the 7-day period and is ready to withdraw.</li>
 </ul>
 <h4 id="unstake-brev"><a class="header" href="#unstake-brev">Unstake BREV</a></h4>
 <p>You can unstake BREV at any time by clicking the <em>Request Unstake</em> button on the Dashboard page. </p>
