deploy: 291ca6f7883bb2c12ee714167308b0fa9117c032

--- a/print.html
+++ b/print.html
@@ -37,10 +37,10 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-1cea7c01.js";
+            window.path_to_searchindex_js = "searchindex-2696b328.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="toc-3145f91a.js"></script>
+        <script src="toc-9a48437a.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -1054,6 +1054,13 @@ go build -o tools
 <h1 id="whitepaper"><a class="header" href="#whitepaper">Whitepaper</a></h1>
 <p>MiCAR whitepaper: <a href="https://brevis.network/whitepaper/micar.xhtml">https://brevis.network/whitepaper/micar.xhtml</a></p>
 <p>Whitepaper: <a href="https://brevis.network/whitepaper/provernet.pdf">https://brevis.network/whitepaper/provernet.pdf</a></p>
+<div style="break-before: page; page-break-before: always;"></div>
+<h1 id="contract-addresses"><a class="header" href="#contract-addresses">Contract Addresses</a></h1>
+<p>Brevis ProverNet currently operates on Base Mainnet. This page lists the primary contract addresses required for provers, stakers, developers, and users interacting with the network.</p>
+<p>StakingController: <a href="https://basescan.org/address/0x9c0D8C5F10f0d3A02D04556a4499964a75DBf4A3">0x9c0D8C5F10f0d3A02D04556a4499964a75DBf4A3</a></p>
+<p>StakingViewer: <a href="https://basescan.org/address/0x659F4172BEd39DeDF6D3f02a0A8AD5719Eafe41F">0x659F4172BEd39DeDF6D3f02a0A8AD5719Eafe41F</a></p>
+<p>BrevisMarket: <a href="https://basescan.org/address/0xcCec2a9FE35b6B5F23bBF303A4e14e5895DeA127">0xcCec2a9FE35b6B5F23bBF303A4e14e5895DeA127</a></p>
+<p>MarketViewer: <a href="https://basescan.org/address/0x0ED8C6e128D1Be1e521B6AcDC25b348829a4Ffd2">0x0ED8C6e128D1Be1e521B6AcDC25b348829a4Ffd2</a></p>
 
                     </main>
 
